# software-design-course

actor-model/: CMakeLists.txt  README.md  conanfile.txt
actor-model/src/: CMakeLists.txt  main.cpp  server.cpp  server.h  test.cpp
event-sourcing/: README.md  pyproject.toml
event-sourcing/src/: admin.py  manager_admin.py  models.py  report.py  season_ticket.py  store.py  turnstile.py
event-sourcing/tests/: test_admin.py  test_manager_admin.py  test_report.py  test_turnstile.py
reactive/: pom.xml
reactive/src/main/java/: Dao.kt  Main.kt  Models.kt
test-containers/: README.md  pom.xml
test-containers/account/: pom.xml
test-containers/account/src/main/java/ru/ifmo/golovin/rain/account/: Application.java  Controller.java
test-containers/account/src/main/java/ru/ifmo/golovin/rain/account/dao/: Dao.java  InMemoryDao.java
test-containers/account/src/main/java/ru/ifmo/golovin/rain/account/models/: Account.java
test-containers/account/src/main/java/ru/ifmo/golovin/rain/account/requests/: ExchangeMarketClient.java  Handlers.java
test-containers/account/src/test/java/ru/ifmo/golovin/rain/: Test.java
test-containers/exchange-market/: pom.xml
test-containers/exchange-market/src/main/java/ru/ifmo/golovin/rain/exchange/: Application.java  Controller.java
test-containers/exchange-market/src/main/java/ru/ifmo/golovin/rain/exchange/dao/: Dao.java  InMemoryDao.java
test-containers/exchange-market/src/main/java/ru/ifmo/golovin/rain/exchange/models/: Company.java
