[tool.poetry]
name = "event-sourcing"
version = "0.1.0"
description = ""
authors = ["Golovin Pavel <gopavel0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
schematics = "^2.1.0"
attrs = "^19.3.0"
motor = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
